# nominatim-create

./: AGENTS.md  Cargo.toml  README.md  compare-ndjson.py  converter.example.json
.github/workflows/: weekly-scb-check.yml
src/: common.rs  config.rs  main.rs  source.rs  target.rs
src/common/: category.rs  coordinate.rs  geo.rs  importance.rs  input.rs  norwegian_counties.rs  text.rs  usage.rs
src/source/: belagenhet.rs  matrikkel.rs  osm.rs  poi.rs  stedsnavn.rs  stopplace.rs
src/source/belagenhet/: convert.rs  download.rs
src/source/matrikkel/: convert.rs  mod.rs  parse.rs
src/source/osm/: entity.rs  mod.rs  passes.rs  street.rs
src/source/poi/: convert.rs  mod.rs  xml.rs
src/source/stedsnavn/: convert.rs  gml.rs  mod.rs
src/source/stopplace/: convert.rs  mod.rs  popularity.rs  xml.rs
tests/: integration.rs  scb.rs
