[package]
name = "nominatim-convert"
version = "0.2.1"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
quick-xml = { version = "0.37", features = ["serialize"] }
osmpbf = "0.3"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
proj = { version = "0.28", features = ["bundled_proj"] }
country-boundaries = "1"

[profile.release]
lto = true
