[package]
name = "nominatim-converter"
version = "0.2.4"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
quick-xml = { version = "0.37", features = ["serialize"] }
osmpbf = "0.3"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
proj = { version = "0.28", features = ["bundled_proj"] }
country-boundaries = "1"
ureq = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
iso3166-static = "0.4.1"

[profile.release]
lto = true
strip = true
